# GraphServer

./: GraphServer.cabal
docs/: Haskell - Дизайн.txt  Haskell - Дизайн.txt~  Haskell - Эстетика.txt
docs/Images2/: Factorial.dia
src/: Constants.hs  GLTypes.hs  GraphServer.hs  Trash.hs  Trash.hs~  Units.hs  run  run~  toRepo
src/Common/: Constants.hs  GLInit.hs  GLTypes.hs  TestData.hs  Units.hs
src/Draw/: .gitignore~  Colors.hs  Draw.hs  GLInit.hs  GOCompile.hs  Render.hs  Temp.hs  Texture.hs  TextureInit.hs  Tools.hs
src/Misc/: BoxSide.hs
src/Structure/: Constants.hs  Dimensions.hs  GOCompile.hs  GraphObject.hs  GraphStructure.hs  HsSyntaxTools.hs  PrimitiveObject.hs  SOConnect.hs  SOConstruct.hs  StructureObject.hs  Texture.hs
src/Textures/: Crate2.tga  arrow.tga  equal_sign.tga  yellow_base.tga
src/Textures/work/: arrow1.tga
